--- a/index.html
+++ b/index.html
@@ -2,9 +2,22 @@
 <head>
     <title>Blogi</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    
 </head>
 <body>
 
 <h1 class="title1">Lennin blogi</h1>
-<a class="button1" href="uusimmat.html">Tapahtumat</a>
+<!--.<a class="button1" href="uusimmat.html">Tapahtumat</a>..-->
+<text id="posts"></text>
+
+<script src="jquery-3.7.1.min.js"></script>
+<script src="uusimmat.js"></script>
+
+<text class="test1" id="test1">
+tämä sivusto on luotu!    
+</text>
+<text class="header1">Tämä sivusto on luotu!</text>
+<script>
+    document.body.style.backgroundSize = `${window.innerWidth}px auto`;
+</script>
 </body>
