--- a/index.html
+++ b/index.html
@@ -6,18 +6,33 @@
 </head>
 <body>
 
-<h1 class="title1">Lennin blogi</h1>
+<h1  class="title1">Lennin blogi</h1>
 <!--.<a class="button1" href="uusimmat.html">Tapahtumat</a>..-->
 <text id="posts"></text>
 
 <script src="jquery-3.7.1.min.js"></script>
+
+
+<div class="div1">
+
+    <text class="test1" id="test1">tämä sivusto on luotu!</text>
+    <text class="header1">Tämä sivusto on luotu!</text>
+  
+
+</div>
+<div class="div2">
+
+    <text class="test12" id="test121">Aamuni on mennyt hyvin!</text>
+    <text class="header2">Tämä aamu meni ihan hyvin!</text>
+  
+
+</div>
+<svg id="rect11" class="rect1" width="350px" height="150px" xmlns="http://www.w3.org/2000/svg">
+    <rect width="350px" height="200px"  fill="gray" />
+</svg> 
+<svg id="rect121" class="rect12" width="350px" height="150px" xmlns="http://www.w3.org/2000/svg">
+    <rect width="350px" height="200px"  fill="gray" />
+</svg> 
 <script src="uusimmat.js"></script>
 
-<text class="test1" id="test1">
-tämä sivusto on luotu!    
-</text>
-<text class="header1">Tämä sivusto on luotu!</text>
-<script>
-    document.body.style.backgroundSize = `${window.innerWidth}px auto`;
-</script>
 </body>
