--- a/index.html
+++ b/index.html
@@ -5,14 +5,20 @@
     
 </head>
 <body>
-
+ 
 <h1  class="title1">Lennin blogi</h1>
 <!--.<a class="button1" href="uusimmat.html">Tapahtumat</a>..-->
 <text id="posts"></text>
 
 <script src="jquery-3.7.1.min.js"></script>
 
+<div class="div3">
 
+    <text class="test112" id="test1211">Panssarilasina ei kannata olla kallista lasia, koska puhelimessani on ollut 20 euron panssarilasi ja se hajosi muutaman viikon jälkeen. Panssarilasina ei kannata olla kuitenkaan muovista kalvoa, vaan halpa lasinen on toimivin. Itsellä on neljän euron lasi, joka on otettu kirppiksen myymien kiinatavaroiden hyllystä. Kaikki halpa ei ole kuitenkaan hyvää, vaan jotkin halppistuotteet on huonolaatuisia. </text>
+    <text class="header3">Puhelimeni panssarilasi</text>
+  
+
+</div>
 <div class="div1">
 
     <text class="test1" id="test1">tämä sivusto on luotu!</text>
@@ -22,7 +28,7 @@
 </div>
 <div class="div2">
 
-    <text class="test12" id="test121">Aamuni on mennyt hyvin!</text>
+    <text class="test12" id="test121">Aamuni on mennyt hyvin!  Lisätty: 2.4.2025</text>
     <text class="header2">Tämä aamu meni ihan hyvin!</text>
   
 
@@ -33,6 +39,9 @@
 <svg id="rect121" class="rect12" width="350px" height="150px" xmlns="http://www.w3.org/2000/svg">
     <rect width="350px" height="200px"  fill="gray" />
 </svg> 
+<svg id="rect1211" class="rect122" width="350px" height="250px" xmlns="http://www.w3.org/2000/svg">
+    <rect width="350px" height="400px"  fill="gray" />
+</svg> 
 <script src="uusimmat.js"></script>
-
-</body>
+<iframe style="position:absolute; top: 1100px; left: 50%; transform: translate(-50%, -50%);" src="https://scratch.mit.edu/projects/324133277/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+</body> 
